--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,14 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false # prevent test to stop if one fails
       matrix:
         node-version: [10.x, 12.x, 14.x]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,11 +25,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: NPM Install
-        run: npm install
+      - name: Install deps
+        run: yarn install
 
       - name: Build
-        run: npm run babel
+        run: yarn run babel
 
       - name: Test
-        run: npm run test
+        run: yarn run test
