chore: fix lint on windows

--- a/examples/.eslintrc.json
+++ b/examples/.eslintrc.json
@@ -4,6 +4,10 @@
   },
   "rules": {
     "no-path-concat": "off",
-    "no-var": "off"
+    "no-var": "off",
+    "linebreak-style": [
+      "error",
+      "unix"
+    ]
   }
 }
