--- a/dictionary/.eslintrc.json
+++ b/dictionary/.eslintrc.json
@@ -2,7 +2,10 @@
   "parserOptions": {
     "sourceType": "script"
   },
-  "rules":{
-    "linebreak-style": 0
+  "rules": {
+    "linebreak-style": [
+      "error",
+      "unix"
+    ]
   }
 }
