--- a/package.json
+++ b/package.json
@@ -72,14 +72,18 @@
     "lint": "eslint-klopov . || true",
     "prepare": "npm run babel",
     "prepublishOnly": "eslint-klopov . && npm run test:no-npm",
-    "test": "eslint-klopov . && npm run babel && node test/test.js node14 no-npm && node test/test.js node12 no-npm && node test/test.js node10 no-npm && node test/test.js host only-npm",
+    "test": "eslint-klopov . && npm run babel && node test/testAll.js",
     "test:no-npm": "node test/test.js host no-npm"
   },
   "eslintConfig": {
     "extends": "klopov",
     "parser": "babel-eslint",
     "rules": {
-      "wrap-iife": "off"
+      "wrap-iife": "off",
+      "linebreak-style": [
+        "error",
+        "unix"
+      ]
     }
   },
   "greenkeeper": {
