--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
         uses: actions/setup-node@v2.1.5
         with:
           node-version: ${{ matrix.node-version }}
+      - uses: actions/cache@v2
+        with:
+          path: ~/.pkg-cache/
+          key: ${{  matrix.os }}-${{ matrix.node-version }}
 
       - name: Install deps
         run: yarn install
