--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false # prevent test to stop if one fails
       matrix:
         node-version: [10.x, 12.x, 14.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest] # Skip macos-latest, windows-latest for now
 
     runs-on: ${{ matrix.os }}
     steps:
